force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>SP-1725 - It represents the life cycle of an account</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Quality Check</fullName>
            </value>
            <value>
                <fullName>Menu processing</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Partially Online</fullName>
            </value>
            <value>
                <fullName>Win Back failed</fullName>
            </value>
            <value>
                <fullName>Active - Temp. Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>