force-app/main/default/objects/Account/fields/Active_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Bank_Account__c</fullName>
    <label>Active Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>