force-app/main/default/objects/Account/fields/Active_Menu_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Menu_ID__c</fullName>
    <label>Active Menu ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>