force-app/main/default/objects/Account/fields/Alcohol_License_Info__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_License_Info__c</fullName>
    <description>Alcohol Service License Number and disclaimer details for Australia</description>
    <label>Alcohol License Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>