force-app/main/default/objects/Account/fields/Alcohol_service_activation__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_service_activation__c</fullName>
    <description>Activation date for Alcohol Delivery</description>
    <label>Alcohol service activation</label>
    <type>Date</type>
</CustomField>