force-app/main/default/objects/Account/fields/Alternative_Bank_Account_Legal_Ref_no__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Bank_Account_Legal_Ref_no__c</fullName>
    <label>Alternative Bank Account - Legal Ref no</label>
    <length>38</length>
    <type>Text</type>
</CustomField>