force-app/main/default/objects/Account/fields/Alternative_Bank_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Bank_Account_Owner__c</fullName>
    <label>Alternative Bank Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>