force-app/main/default/objects/Account/fields/Alternative_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Bank_Account_Type__c</fullName>
    <label>Alternative Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insolvency pay-out</fullName>
            </value>
            <value>
                <fullName>Garnishee pay-out</fullName>
            </value>
            <value>
                <fullName>DebCon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>