force-app/main/default/objects/Account/fields/Alternative_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Alternative_IBAN__c</fullName>
    <label>Alternative IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>