force-app/main/default/objects/Account/fields/Approach_Method__c.field-meta.xml
<CustomField>
    <fullName>Approach_Method__c</fullName>
    <label>Approach Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reveal Yogiyo</fullName>
            </value>
            <value>
                <fullName>Do NOT reveal Yogiyo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>