force-app/main/default/objects/Account/fields/Available_Delivery_Time_Comment__c.field-meta.xml
<CustomField>
    <fullName>Available_Delivery_Time_Comment__c</fullName>
    <description>Available Delivery Time Comment</description>
    <inlineHelpText>Available Delivery Time Comment</inlineHelpText>
    <label>Available Delivery Time Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>