force-app/main/default/objects/Account/fields/Available_Delivery_Time_Weekday_Begin__c.field-meta.xml
<CustomField>
    <fullName>Available_Delivery_Time_Weekday_Begin__c</fullName>
    <description>Available Delivery Time Weekday Beginning</description>
    <inlineHelpText>When the restaurant opens on weekdays</inlineHelpText>
    <label>Available Delivery Time Weekday Begin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>