force-app/main/default/objects/Account/fields/Available_Delivery_Time_Weekday_End__c.field-meta.xml
<CustomField>
    <fullName>Available_Delivery_Time_Weekday_End__c</fullName>
    <description>Available Delivery Time Weekday Ending Time</description>
    <inlineHelpText>When the restaurant closes on weekdays</inlineHelpText>
    <label>Available Delivery Time Weekday End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>