force-app/main/default/objects/Account/fields/Available_Delivery_Time_Weekend_Begin__c.field-meta.xml
<CustomField>
    <fullName>Available_Delivery_Time_Weekend_Begin__c</fullName>
    <description>Available Delivery Time Weekend Begin</description>
    <inlineHelpText>When the restaurant opens on weekends</inlineHelpText>
    <label>Available Delivery Time Weekend Begin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>