force-app/main/default/objects/Account/fields/Available_Delivery_Time_Weekend_End__c.field-meta.xml
<CustomField>
    <fullName>Available_Delivery_Time_Weekend_End__c</fullName>
    <description>Available Delivery Time Weekend Closing Time</description>
    <inlineHelpText>When the restaurant closes on weekends</inlineHelpText>
    <label>Available Delivery Time Weekend End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>