force-app/main/default/objects/Account/fields/Average_rating__c.field-meta.xml
<CustomField>
    <fullName>Average_rating__c</fullName>
    <description>Field to sync average rating from the BE</description>
    <label>Average Rating</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>