force-app/main/default/objects/Account/fields/Avg_Commission_of_Cont_Franchise_Branch__c.field-meta.xml
<CustomField>
    <fullName>Avg_Commission_of_Cont_Franchise_Branch__c</fullName>
    <description>Average Commission of Cont. Franchise Branch</description>
    <label>Avg Commission of Cont. Franchise Branch</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>