force-app/main/default/objects/Account/fields/Backend_email__c.field-meta.xml
<CustomField>
    <fullName>Backend_email__c</fullName>
    <description>Backend Email address</description>
    <label>Relay Method Email</label>
    <length>90</length>
    <type>Text</type>
</CustomField>