force-app/main/default/objects/Account/fields/Backend_ID__c.field-meta.xml
<CustomField>
    <fullName>Backend_ID__c</fullName>
    <description>this field is used to store the backend id of the restaurant</description>
    <externalId>true</externalId>
    <label>Backend ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>