force-app/main/default/objects/Account/fields/Backend_Tarif__c.field-meta.xml
<CustomField>
    <fullName>Backend_Tarif__c</fullName>
    <label>Tariff</label>
    <length>100</length>
    <type>Text</type>
</CustomField>