force-app/main/default/objects/Account/fields/Bank_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Owner__c</fullName>
    <label>Bank Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>