force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank name</description>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>