force-app/main/default/objects/Account/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <defaultValue>&quot;n/a&quot;</defaultValue>
    <description>Bank Sort Code for Australia</description>
    <label>Bank Sort Code (BSB)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>