force-app/main/default/objects/Account/fields/Bank_SubscriptionFee__c.field-meta.xml
<CustomField>
    <fullName>Bank_SubscriptionFee__c</fullName>
    <description>This field contains the subscription fee that the restaurant has to pay. It&apos;s synced from the backend and is needed for the billing.</description>
    <label>Subscription Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>