force-app/main/default/objects/Account/fields/Billing_Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Number__c</fullName>
    <description>Billing Number for Korean Address</description>
    <label>Billing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>