force-app/main/default/objects/Account/fields/Billing_Dong__c.field-meta.xml
<CustomField>
    <fullName>Billing_Dong__c</fullName>
    <label>Billing Dong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>