force-app/main/default/objects/Account/fields/Billing_GunGu__c.field-meta.xml
<CustomField>
    <fullName>Billing_GunGu__c</fullName>
    <description>Korean Address detail</description>
    <label>Billing GunGu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>