force-app/main/default/objects/Account/fields/Billing_Subdistrict__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subdistrict__c</fullName>
    <description>Korean address detail</description>
    <label>Billing Subdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>