force-app/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <description>Topics that the user can not talk with the owner of the restaurant in Korea</description>
    <label>Blacklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMS Relay</fullName>
            </value>
            <value>
                <fullName>Terminal Relay</fullName>
            </value>
            <value>
                <fullName>App Owner Relay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>