force-app/main/default/objects/Account/fields/Box_Available__c.field-meta.xml
<CustomField>
    <fullName>Box_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Box Available</label>
    <type>Checkbox</type>
</CustomField>