force-app/main/default/objects/Account/fields/Box_Reachable__c.field-meta.xml
<CustomField>
    <fullName>Box_Reachable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Box Reachable</label>
    <type>Checkbox</type>
</CustomField>