force-app/main/default/objects/Account/fields/Branches_In_Franchise_HQ__c.field-meta.xml
<CustomField>
    <fullName>Branches_In_Franchise_HQ__c</fullName>
    <description>Branches in Franchise HQ</description>
    <label>Branches in Franchise HQ</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>