force-app/main/default/objects/Account/fields/Branding_Info__c.field-meta.xml
<CustomField>
    <fullName>Branding_Info__c</fullName>
    <label>Branding Info</label>
    <type>TextArea</type>
</CustomField>