force-app/main/default/objects/Account/fields/Branding_Status__c.field-meta.xml
<CustomField>
    <fullName>Branding_Status__c</fullName>
    <label>Branding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Branded - Exclusive</fullName>
            </value>
            <value>
                <fullName>Branded - Non Exclusive</fullName>
            </value>
            <value>
                <fullName>Branding Refused</fullName>
            </value>
            <value>
                <fullName>Exclusive with Competitor</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not suitable for branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>