force-app/main/default/objects/Account/fields/Business_Licence_Exp__c.field-meta.xml
<CustomField>
    <fullName>Business_Licence_Exp__c</fullName>
    <inlineHelpText>Trade License/Business License Expiry Date</inlineHelpText>
    <label>Business Licence Exp.</label>
    <type>Date</type>
</CustomField>