force-app/main/default/objects/Account/fields/Business_Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Licence_Type__c</fullName>
    <description>Originally use for Alcohol Licences in Australia (Alcohol Service). Changed the name in order to cover more use cases like the Korean Business Licence Types</description>
    <label>Business Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alcohol Delivery Licence</fullName>
            </value>
            <value>
                <fullName>Alcohol Delivery Limited</fullName>
            </value>
            <value>
                <fullName>Bakery Licence</fullName>
            </value>
            <value>
                <fullName>Consignment Licence</fullName>
            </value>
            <value>
                <fullName>Express Goods Licence</fullName>
            </value>
            <value>
                <fullName>Food Manufacturing processing Licence</fullName>
            </value>
            <value>
                <fullName>Instant Food Licence</fullName>
            </value>
            <value>
                <fullName>Manufacturing and Management of Meat</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
            <value>
                <fullName>Other foods business Licence</fullName>
            </value>
            <value>
                <fullName>Regular Restaurant Licence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>