force-app/main/default/objects/Account/fields/Cancelled_Orders_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Orders_Last_Month__c</fullName>
    <label>Cancelled Orders - Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>