force-app/main/default/objects/Account/fields/CAPEX__c.field-meta.xml
<CustomField>
    <fullName>CAPEX__c</fullName>
    <inlineHelpText>This is the capital invested into the Facility</inlineHelpText>
    <label>CAPEX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>