force-app/main/default/objects/Account/fields/Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Chain_ID__c</fullName>
    <label>Chain ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>