force-app/main/default/objects/Account/fields/Closing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Closing_Schedule__c</fullName>
    <description>Closing Schedule</description>
    <label>Closing Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>