force-app/main/default/objects/Account/fields/Collection_Account_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Birthdate__c</fullName>
    <description>Collection Account Birthdate</description>
    <label>Collection Account Birthdate</label>
    <type>Date</type>
</CustomField>