force-app/main/default/objects/Account/fields/Collection_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Number__c</fullName>
    <description>Collection Account Number</description>
    <label>Collection Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>