force-app/main/default/objects/Account/fields/Collection_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Owner__c</fullName>
    <description>Collection Account Owner</description>
    <label>Collection Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>