force-app/main/default/objects/Account/fields/Collection_Account_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account_Sort_Code__c</fullName>
    <label>Collection Account Sort Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>