force-app/main/default/objects/Account/fields/Collection_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Bank_Name__c</fullName>
    <description>Collection Bank Name</description>
    <label>Collection Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>