force-app/main/default/objects/Account/fields/Collection_Category__c.field-meta.xml
<CustomField>
    <fullName>Collection_Category__c</fullName>
    <description>Categories for distinguish which restaurant are corporative in terms of debt collection</description>
    <label>Collection Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1. Warning</fullName>
            </value>
            <value>
                <fullName>2. Risk (Danger)</fullName>
            </value>
            <value>
                <fullName>3. High-Risk</fullName>
            </value>
            <value>
                <fullName>4. New (Initial)</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>