force-app/main/default/objects/Account/fields/Commission_Backend__c.field-meta.xml
<CustomField>
    <fullName>Commission_Backend__c</fullName>
    <description>Commission in the backend, to cross-check the sync b/w SF and backend</description>
    <label>Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>