force-app/main/default/objects/Account/fields/Commission_Base__c.field-meta.xml
<CustomField>
    <fullName>Commission_Base__c</fullName>
    <description>Field to track finance specifications (gross/net) in Sweden and Finland SP-4658</description>
    <label>Commission Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROSS</fullName>
                <label>Basket size calculation</label>
            </value>
            <value>
                <fullName>INTAX</fullName>
                <label>Order size calculation</label>
            </value>
            <value>
                <fullName>comm1</fullName>
                <label>Order Size including Packing</label>
            </value>
            <value>
                <fullName>comm2</fullName>
                <label>Basket Size including Packaging &amp; MOV residual</label>
            </value>
            <value>
                <fullName>NMV</fullName>
                <label>Net Merchandise Volume</label>
            </value>
            <value>
                <fullName>GMV</fullName>
                <label>Gross Merchandise Volume</label>
            </value>
            <value>
                <fullName>NFV</fullName>
                <label>Net Food Value</label>
            </value>
            <value>
                <fullName>GFV</fullName>
                <label>Gross Food Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>