force-app/main/default/objects/Account/fields/Commission_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payment_Method__c</fullName>
    <label>Commission Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>C.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>