force-app/main/default/objects/Account/fields/Commission_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Commission_Revenue__c</fullName>
    <description>Total commission revenue</description>
    <label>Commission Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>