force-app/main/default/objects/Account/fields/Commission_Revenue_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Revenue_Current_Month__c</fullName>
    <description>Current month commission revenue</description>
    <label>Commission Revenue Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>