force-app/main/default/objects/Account/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Company code of account company</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>